<resources>
    <string name="app_name">MyMapMarkers</string>
    <string name="marker_name">Name:</string>
    <string name="marker_description">Description:</string>
    <string name="marker_coordinates">Coordinates:</string>
    <string name="card_marker_set_coordinates">%1$f, %2$f</string>
    <string name="marker_menu_show_description">Show description</string>
    <string name="marker_menu_edit">Edit marker</string>
    <string name="marker_menu_remove">Remove marker</string>
    <string name="edit_dialog_name_hint">Name</string>
    <string name="edit_dialog_hint_description">Description</string>
    <string name="edit_dialog_button_text">Save</string>
    <string name="edit_dialog_heading">Edit</string>
    <string name="dialog_new_marker_heading">New Marker</string>
    <string name="map_button_text">MyMarkers</string>
    <string name="feed_nothing_text">Nothing here</string>
    <string name="feed_button_text">Map</string>
</resources>