<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        android:src="@drawable/round_remove_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:text="@string/dialog_new_marker_heading"
            android:textAlignment="center"
            android:textSize="28sp"/>

        <EditText
            android:id="@+id/newMarkerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/background"
            android:hint="@string/edit_dialog_name_hint"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:textColorHint="?colorControlNormal" />

        <EditText
            android:id="@+id/newMarkerDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/background"
            android:hint="@string/edit_dialog_hint_description"
            android:inputType="textMultiLine"
            android:textColor="@color/primary_text"
            android:textColorHint="?colorControlNormal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newMarkerSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/button"
            android:text="@string/edit_dialog_button_text" />


    </LinearLayout>
</LinearLayout>